[package]
name = "evtclib"
version = "0.2.0"
authors = ["Daniel"]
edition = "2018"
description = "An evtc parsing library"
readme = "README.md"
repository = "https://gitlab.com/dunj3/evtclib"
license = "MIT"
include = [
    "/src/**/*.rs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
byteorder = "1"
fnv = "1.0.3"
getset = "0.1"
zip = "0.5"
